# turquoise

./: package-lock.json  package.json  server.js
public/: app.js  bootstrap.js  bridge.js  files.js  folder.js  identity.js  index.html  main.js  manifest.json  messages.js  network.js  server.js  state.js  style.css  sw.js  tools-modules.js  tools-registry.js  tqapps.js  tqlog.js  ui.js  webrtc.js
server/: server.js
src-tauri/: Cargo.toml  README.md  commands.rs  discovery.rs  main.rs  propagation.rs  state.rs  tauri.conf.json  transfer.rs
test/: server-presence.test.js
