[package]
name    = "turquoise"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name        = "turquoise_lib"
crate-type  = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "turquoise"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# ── Tauri core ────────────────────────────────────────────────────
tauri = { version = "1", features = [
  "api-all",
  "system-tray",
] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# ── Async runtime ─────────────────────────────────────────────────
tokio = { version = "1", features = [
  "full",       # rt-multi-thread, net, fs, io-util, sync, time, macros
] }

# ── Network ───────────────────────────────────────────────────────
mdns-sd          = "0.10"   # mDNS service discovery (pure Rust)
local-ip-address = "0.6"    # get LAN IP
tokio-tungstenite = "0.23"  # async WebSocket (local signaling server)
futures-util     = "0.3"    # Stream combinators for WS

# ── HTTP server (app propagation) ─────────────────────────────────
axum             = { version = "0.7", features = ["tokio", "http1"] }
tower-http       = { version = "0.5", features = ["fs", "cors"] }

# ── Serialization ─────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Utilities ─────────────────────────────────────────────────────
uuid     = { version = "1", features = ["v4", "fast-rng"] }
anyhow   = "1"             # ergonomic error handling
log      = "0.4"
thiserror = "1"

[features]
default          = ["custom-protocol"]
custom-protocol  = ["tauri/custom-protocol"]

[profile.release]
panic           = "abort"    # smaller binary, faster
codegen-units   = 1          # max optimization
lto             = true
opt-level       = 3
strip           = true
